--- a/paper.tex
+++ b/paper.tex
@@ -8,7 +8,6 @@
 
 \newcommand{\version}{v1.0}
 
-
 \begin{document}
 \begin{centering}
 	\Large{Master Seminar}
@@ -427,7 +426,7 @@ After writing this paper we decided to make the third topic subject to our own f
 
 
 \bibliographystyle{splncs04}
-\bibliography{index}
+\bibliography{bibliography}
 
 \section*{License}
 \ccby\thinspace\thinspace This work is licensed under a \href{https://creativecommons.org/licenses/by/4.0/}{Creative Commons Attribution 4.0 International License}.
